trunk/Archive2/03/dbc2d219403455/output
main.cpp: In function 'int main()':
main.cpp:13:20: error: expression cannot be used as a function
     for (auto& x : r) ;
                    ^
main.cpp:13:20: error: expression cannot be used as a function
